# kaiana-power

./: AUTHORS  CMakeLists.txt  HACKING  INSTALL  README  README.md  build.sh
data/: CMakeLists.txt  net.launchpad.power-installer.policy.cmake  power-installer-pkexec.cmake  power-installer.desktop.cmake
data/schemas/: org.pantheon.power-installer.gschema.xml
debian/: changelog  control  copyright
po/: pl.po  power-installer.pot  ve.po
src/: CMakeLists.txt  MainWindow.vala  Notification.vala  main.vala  notification.sh
src/Backend/: APTController.vala  ExecuteHandler.vala  FileHandler.vala
src/Widgets/: ActionsTab.vala  CommandTab.vala  DragDropTab.vala  IconGrid.vala  PreferencesDialog.vala  Tutorial.vala  TutorialPage.vala
